# AdverseDrugReactionInText

./: DetectingADR.ipynb  README.md  pyproject.toml
data/: adr_database.txt  drug_database.txt  final_seqtag_train_data.txt
data/CVP/: cvp_seqtag_train_data.txt
data/HuggingFace/: huggingFace_seqtag_test_data.txt  huggingFace_seqtag_train_data.txt  huggingFace_seqtag_val_data.txt  test_split.csv  train_split.csv  val_split.csv
data/evaluation_results/: eval_LSTM.csv  eval_cosine_corrected.csv  eval_finalimprov.csv  test_split_LSTM_and_DP_results.csv  test_split_LSTM_cosine_results.csv  test_split_LSTM_results.csv  test_split_finalimprov_results.csv  train_split_cosine_scores.csv
taggers/base-model/: dev.tsv  loss.tsv  test.tsv
