[tool.poetry]
name = "adrdetection"
version = "0.1.0"
description = "Building an LSTM to detect drug names and associated adverse drug reactions in english texts."
authors = ["Amanda SR Ho <amanda.hsr@u.nus.edu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.3.3"
tqdm = "^4.67.1"
biopython = "^1.85"
scikit-learn = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
